[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock_project"
version = "0.0.1"
description = ""
dependencies = [
    "click ==8.1.3",
    "django-idp-user @ https://github.com/godd0t/django-idp-user/archive/refs/tags/v2.1.37.tar.gz",
]

[[project.authors]]
name = "Chris Pryer"
email = "cnpryer@gmail.com"

[project.optional-dependencies]
dev = [
    "black ==22.8.0",
    "isort ==5.12.0",
    "pytest ==7.3.1",
]
